--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <link rel="shortcut icon" href="haruhikage.ico">
-        <title>なんで「春日影」やの？</title>
+        <title>なんで「春日影」やったの？</title>
     </head>
     <body>
-        <h1>なんで「春日影」やの？</h1>
+        <h1>なんで「春日影」やったの？</h1>
         <img src="haruhikage.png" width="700" alt="春日影演奏失败了" title="为什么要弹春日影？"/>
         <br />点击演奏春日影: 
         <audio controls>
