--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <source src="春日影.mp3" type="audio/mpeg">
             春日影演奏失败了
         </audio>
-        <p>Contact: <a href="mailto:0w0@ruriko.moe">0w0@ruriko.moe</a>/<a href="mailto:mygo@soyor.in">mygo@soyor.in</a>
+        <p>Contact: <a href="mailto:mygo@soyor.in">mygo@soyor.in</a>
         </p>
     </body>
 </html>
